# avcpp

./: CMakeLists.txt
example/api2-samples/: CMakeLists.txt  api2-decode-encode-video.cpp  api2-dict-basic.cpp
src/: CMakeLists.txt  codeccontext.cpp  codeccontext.h  dictionary.h  ffmpeg.h  stream.cpp  stream.h  videorescaler.cpp  videorescaler.h
src/filters/: filtergraph.cpp
